[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Main menu.gd" type="Script" id=1]
[ext_resource path="res://Misc/lucon.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Misc/Font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Misc/Font_small.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Main menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="Always" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 256.0

[node name="Backround" type="ColorRect" parent="Always"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.164706, 0.164706, 0.227451, 1 )

[node name="Main_text" type="Label" parent="Always"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Jeu chose"
align = 1
valign = 1

[node name="Main_UI" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 992.0
margin_top = 504.0
margin_right = -928.0
margin_bottom = -576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Main_UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -216.0
margin_right = 128.0
margin_bottom = -88.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Créer"

[node name="Join" type="Button" parent="Main_UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -24.0
margin_right = 128.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 4 )
text = "Joindre"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Main_UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = 168.0
margin_right = 192.0
margin_bottom = 296.0
custom_fonts/font = ExtResource( 4 )
text = "Paramètres"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Main_UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = 360.0
margin_right = 160.0
margin_bottom = 488.0
custom_fonts/font = ExtResource( 4 )
text = "Quiter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join_UI" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP_Join" type="Button" parent="Join_UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = 100.0
margin_right = 256.0
margin_bottom = 227.0
custom_fonts/font = ExtResource( 4 )
text = "Join server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IP_Line" type="LineEdit" parent="Join_UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.0
margin_top = -156.0
margin_right = 280.0
margin_bottom = -81.0
custom_fonts/font = ExtResource( 4 )
align = 1

[node name="Settings_UI" type="Panel" parent="."]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
visible = false
margin_left = 128.0
margin_top = 832.0
margin_right = 512.0
margin_bottom = 959.0
custom_fonts/font = ExtResource( 4 )
text = "Fermer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
